# libvisio-rs

./: Cargo.toml  README.md  build.rs  cbindgen.toml
.github/workflows/: ci.yml  release.yml
examples/: convert.rs
include/: libvisio_rs.h
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
src/: lib.rs  model.rs
src/src/: error.rs
src/src/svg/: render.rs
src/src/vsd/: mod.rs  nurbs.rs  records.rs
src/src/vsdx/: parser.rs  text.rs  theme.rs
src/svg/: mod.rs  render.rs
src/vsd/: mod.rs  nurbs.rs  parser.rs  records.rs  shapes.rs
src/vsdx/: gradient.rs  image.rs  mod.rs  parser.rs  theme.rs
tests/: integration.rs  render_tests.rs
