[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "libvisio-ng"
version = "0.1.0"
description = "Rust-powered Visio file parser and SVG converter"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.8"
authors = [{ name = "Daniel Nylander", email = "daniel@danielnylander.se" }]
keywords = ["visio", "vsdx", "vsd", "svg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.scripts]
visio2svg = "libvisio_ng:_cli_main"

[tool.maturin]
features = ["pyo3/extension-module"]
